<resources>
    <string name="btn_confirm">确定</string>
    <string name="btn_ignore">不再提醒</string>
    <string name="btn_confirm_yes">确认</string>
    <string name="btn_pay">付款</string>
    <string name="btn_clear">清空</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_delete">删除</string>
    <string name="btn_modify">修改</string>
    <string name="btn_send">发送</string>
    <string name="dialog_call_service_text">您将拨打客服电话\n%s"</string>
    <string name="dialog_call_service_title">温馨提示</string>
    <string name="app_name">360洗车商家</string>
    <string name="action_settings">设置</string>
    <string name="submit">提交</string>
    <string name="install">安装</string>
    <string name="downloading">下载中</string>
    <string name="downloaded">下载完成</string>
    <string name="immediately_opened">立即开通\t></string>
    <string name="immediately_opened_2">立即开通</string>
    <string name="relieve">解除\t></string>
    <string name="relieve_2">解除</string>
    <string name="opened">已开通</string>
    <string name="unopen">未开通</string>
    <string name="net_error">网络不可用，请检查你的网络设置</string>
    <string name="notice_off_hint">若关闭，您将收不到领投鸟给您发送的消息通知</string>
    <string name="notice_hint">您可以设置接收到消息通知是否需要声音和振动提醒</string>
    <string name="ERROR_PIC_CODE">获取图片验证码错误,请重试</string>
    <string name="tab_main">首页</string>
    <string name="tab_investiment">门店</string>
    <string name="tab_account">我的账户</string>
    <string name="tab_more">关于我们</string>
    <string name="back_more_quit">再按一次返回键退出程序</string>
    <string name="new_password_hint">请输入密码</string>
    <string name="new_password_again_hint">请再次输入密码</string>
    <string name="password_hint">请输入修改密码</string>
    <string name="password_again_hint">请再次输入修改密码</string>
    <string name="login_label_signin">登录</string>
    <string name="login_label_register">注册</string>
    <string name="forgotten_password">忘记密码?</string>
    <string name="get_password">找回密码</string>
    <string name="modify_password">密码修改</string>
    <string name="verifycode_hint">请输入4位验证码</string>
    <string name="register">注册</string>
    <string name="next">下一步</string>
    <string name="user_auth_now">立即认证</string>
    <string name="realname_text">您未完成用户实名认证，为了您的资金安全，请进行认证!</string>
    <string name="bindbank_text">您未完成银行卡绑定，绑定银行卡后方可进行充值投资，要不绑一张试试？</string>
    <string name="complete_register">完成注册</string>
    <string name="mobile_number_hint">请输入手机号</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="reget_verify_code">重新获取</string>
    <string name="login_first">请先登录</string>
    <string name="mobile_num">手机号</string>
    <string name="mobile_number_forgetpwd_hint">请输入您的手机号</string>
    <string name="identity_card">身份证号</string>
    <string name="idcard_hint">请输入身份证号</string>
    <string name="captcha">验证码</string>
    <string name="reset_trand_passwpord_error">需要实名认证才能更改支付密码</string>
    <string name="get_correct_mobile">请输入正确的手机号码</string>
    <string name="get_correct_password">请输入至少6位密码</string>
    <string name="get_correct_verifycode">请输入正确验证码</string>
    <string name="modify_password1">请输入6~18位新密码</string>
    <string name="modify_password2">请再次输入新密码</string>
    <string name="confirm_modify">确认修改</string>
    <string name="get_correct_idcard">请输入正确身份证号</string>
    <string name="recomment_code">请输入推荐人手机号</string>
    <string name="modifyPwd">修改密码</string>
    <string name="password_not_match">两次密码不一致，请重新输入</string>
    <string name="have_recommend">我有推荐人</string>
    <string name="read_agreement">我已阅读并同意</string>
    <string name="niaoren_agreement">《在线服务协议》</string>
    <string name="password_info1">密码应该为6-18位英文字母与数字的组合 </string>
    <string name="password_info2">如有推荐人，请输入推荐人手机号。</string>
    <string name="resendable_after_seconds">秒后重试</string>
    <string name="register_success_note">恭喜您注册成功，现在去绑卡，送88元金额</string>
    <string name="ERROR_CODE_A0001">图片验证码错误，请刷新图片验证码后重试</string>
    <string name="ERROR_CODE_1">错误，请稍后重试</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_insurance">安全保障</string>
    <string name="text_money_volume">洗车券</string>
    <string name="text_invite_friends">邀请好友</string>
    <string name="my_friends">合伙人</string>
    <string name="pull_to_refresh_tap_label">点击刷新</string>
    <string name="pull_to_refresh_pull_label">下拉可以刷新...</string>
    <string name="pull_to_refresh_release_label">松开可以刷新...</string>
    <string name="pull_to_refresh_refreshing_label">数据加载中...</string>
    <string name="annual_income">年化收益率</string>
    <string name="invest_date">投资期限</string>
    <string name="remaining_amount">剩余金额</string>
    <string name="newbie_product">新手体验标</string>
    <string name="newbie_coupon">体验金券购买</string>
    <string name="product_tag1">新手</string>
    <string name="product_tag2">体验</string>
    <string name="forget_gesture_code">忘记手势密码</string>
    <string name="reset_gesture_code">重设手势密码</string>
    <string name="set_gesture_pattern">设置手势密码</string>
    <string name="wrong_gesture_pattern">两次密码不同,请重新设置</string>
    <string name="modify_gesture">修改手势密码</string>
    <string name="modify_gesture_original">请绘制原手势密码</string>
    <string name="modify_gesture_new">请绘制新手势密码</string>
    <string name="unlock_gesture">手势解锁</string>
    <string name="unlock_gesture_welcome">欢迎回来,请绘制手势密码</string>
    <string name="setup_gesture_code">设置手势密码</string>
    <string name="set_gesture_pattern_reason">set_gesture_pattern_reason</string>
    <string name="hint">提示</string>
    <string name="open_deposit_pwd_hint">开通免密充值后，下次充值将不再需要输入支付密码。您也可以随时解除\n是否立即开通？</string>
    <string name="relieve_deposit_pwd_hint">解除免密充值后，每次充值都将需要输入支付密码。解除后您也可以以后再次开通。\n是否解除？</string>
    <string name="feedback_hint">如您的问题要马上反馈，请联系公众号 “领投鸟” </string>
    <string name="umeng_share">分享</string>
    <string name="umeng_auth">授权</string>
    <string name="umeng_deleauth">清除对应授权</string>
    <string name="umeng_shake">摇一摇</string>
    <string name="umeng_comment">评论相关</string>
    <string name="umeng_openshare">打开分享面板</string>
    <string name="umeng_share1">默认分享面板可编辑分享页</string>
    <string name="umeng_share2">自定义分享面板可编辑分享页</string>
    <string name="umeng_share3">单平台直接分享</string>
    <string name="umeng_share4">多平台直接分享</string>
    <string name="umeng_share5">默认分享面板可编辑分享页多平台</string>
    <string name="umeng_shakeshotscreen">摇一摇截屏</string>
    <string name="umeng_shakeshare">摇一摇分享</string>
    <string name="umeng_registershake">注册摇一摇</string>
    <string name="umeng_comment1">用户信息</string>
    <string name="umeng_comment2">本地登陆</string>
    <string name="umeng_comment3">本地授权</string>
    <string name="umeng_comment4">好友功能</string>
    <string name="umeng_comment5">评论功能</string>
    <string name="umeng_comment6">注销</string>
    <string name="umeng_comment7">解决事例</string>
    <string name="umeng_nativequery">本地登陆信息查询</string>
    <string name="umeng_loginsina">登陆新浪</string>
    <string name="umeng_logoutsina">登出新浪</string>
    <string name="umeng_loginqq">登陆QQ</string>
    <string name="umeng_logoutqq">登出QQ</string>
    <string name="umeng_loginqzone">登陆QQ空间</string>
    <string name="umeng_logoutzone">登出QQ空间</string>
    <string name="umeng_customlogin">自定义登陆</string>
    <string name="umeng_addfriend">添加好友</string>
    <string name="umeng_getfriendlist">获取好友列表</string>
    <string name="umeng_commentmodular">评论模块</string>
    <string name="umeng_getcommentlist">获取评论列表</string>
    <string name="umeng_sendcomment">发出评论</string>
    <string name="actionbar_activity_not_found">Failed to open intent...</string>
    <string name="share_by_weixin">微信分享</string>
    <string name="share_by_qq">QQ分享</string>
    <string name="share_by_yixin">易信分享</string>
    <string name="shake_share">注册摇一摇截图（分享）</string>
    <string name="shake_openshare">注册摇一摇（打开分享面板）</string>
    <string name="shake_scrshot">注册摇一摇（截图）</string>
    <string name="take_scrshot">直接截图</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="stop">停止</string>
    <string name="quit">退出</string>
    <string name="video_start_time">00:00</string>
    <string name="goto_video">摇一摇视频截图Activity</string>
    <string name="goto_game">游戏Activity</string>
    <string name="goto_common">普通Activity</string>
    <string name="video">VideoActivity</string>
    <string name="game">GameActivity</string>
    <string name="common">CommonActivity</string>
    <string name="back">返回</string>
    <string name="goto_facebook">添加Facebook分享</string>
    <string name="fb_login">Facebook登录</string>
    <string name="fb_logout">Facebook注销</string>
    <string name="fb_share">Facebook分享</string>
    <string name="laiwang_share">来往分享</string>
    <string name="instagram_share">Instagram分享</string>
    <string name="pocket_share">Pocket分享</string>
    <string name="linkedin_share">LinkedIn分享</string>
    <string name="foursquare_share">FourSquare分享</string>
    <string name="ynote_share">有道云笔记分享</string>
    <string name="evernote_share">印象笔记分享</string>
    <string name="pinterest_share">Pinterest分享</string>
    <string name="custom_platform_share">自定义平台分享</string>
    <string name="login_sina">登录（新浪微博）</string>
    <string name="logout_sina">注销登录（新浪微博）</string>
    <string name="login_qq">登录（QQ）</string>
    <string name="logout_qq">注销登录（QQ）</string>
    <string name="login_qzone">登录（QQ空间）</string>
    <string name="logout_qzone">注销登录（QQ空间）</string>
    <string name="whatsapp_share">whatsapp分享</string>
    <string name="line_share">line分享</string>
    <string name="tumblr_share">tumblr分享</string>
    <string name="kakao_share">Kakao Talk分享</string>
    <string name="flickr_share">flickr分享</string>
    <string name="fb_app_id">567261760019884</string>
    <string name="photo_post">Photo Post</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Successfully posted \'%1$s\'.\nPost ID: %2$s</string>
    <string name="error">Error</string>
    <string name="money_error">请输入正确金额</string>
    <string name="money_error_hint">输入的金额应最多两位小数</string>
    <string name="status_update">Updating Facebook status at </string>
    <string name="ok">OK</string>
    <string name="cancelled">Cancelled</string>
    <string name="cancel">取消</string>
    <string name="cancel_2">还是算了</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="facebook_app_id">487692214752558</string>
    <string name="license_type">营业执照类型</string>
    <string name="business_entity">企业法人</string>
    <string name="individual_business">个体工商户</string>
    <string name="has_license">是否有营业执照名称</string>
    <string name="license_name">营业执照名称</string>
    <string name="license_name_hint">请输入营业执照名称</string>
    <string name="license_reg">营业执照注册号</string>
    <string name="license_reg_hint">注册号/统一社会信用代码</string>
    <string name="owner_name">经营者姓名</string>
    <string name="owner_name_hint">请输入经营者姓名</string>
    <string name="owner_id">经营者身份证号</string>
    <string name="owner_id_hint">请输入经营者身份证号</string>
    <string name="upload_attach">上传附件</string>
    <string name="upload_license">上传营业执照</string>
    <string name="upload_owner_id_front">上传身份证正面照</string>
    <string name="upload_owner_id_back">上传身份证反面照</string>
    <string name="shop_name">店铺名称</string>
    <string name="input_shop_name">请输入店铺名称</string>
    <string name="address_name">店铺位置</string>
    <string name="input_address_name">请输入店铺位置</string>
    <string name="work_time">工作时间</string>
    <string name="input_work_time">请输入工作时间</string>
    <string name="washspace_num">洗车位数</string>
    <string name="washspace_num_hint">请输入洗车位数</string>
    <string name="service_name">服务名称</string>
    <string name="service_name_hint">请输入服务名称</string>
    <string name="service_price">服务价格</string>
    <string name="service_price_hint">请输入服务价格</string>
    <string name="service_time">服务时间</string>
    <string name="service_time_hint">请输入服务时间</string>
</resources>