<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/base_title"></include>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white">


        <TextView
            android:id="@+id/tv_label9"
            android:layout_width="80dp"
            android:layout_height="49dp"
            android:layout_below="@+id/iv3"
            android:gravity="right|center_vertical"
            android:text="@string/service_name"
            android:textColor="@color/label_grey1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_service_name"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_toRightOf="@id/tv_label9"
            android:background="@null"
            android:gravity="left|center"
            android:hint="@string/service_name_hint"
            android:paddingLeft="5dp"
            android:paddingRight="15dp"
            android:textColor="@color/text_color2"
            android:textColorHint="@color/label_grey1"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_label8"
            android:layout_width="80dp"
            android:layout_height="49dp"
            android:layout_below="@+id/iv3"
            android:gravity="right|center_vertical"
            android:text="@string/service_price"
            android:textColor="@color/label_grey1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_service_price"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_toRightOf="@id/tv_label8"
            android:background="@null"
            android:gravity="left|center"
            android:hint="@string/service_price_hint"
            android:paddingLeft="5dp"
            android:paddingRight="15dp"
            android:textColor="@color/text_color2"
            android:textColorHint="@color/label_grey1"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white">


        <TextView
            android:id="@+id/tv_label7"
            android:layout_width="80dp"
            android:layout_height="49dp"
            android:layout_below="@+id/iv3"
            android:gravity="right|center_vertical"
            android:text="@string/service_time"
            android:textColor="@color/label_grey1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_service_time"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_toRightOf="@id/tv_label7"
            android:background="@null"
            android:gravity="left|center"
            android:hint="@string/service_time_hint"
            android:paddingLeft="5dp"
            android:paddingRight="15dp"
            android:textColor="@color/text_color2"
            android:textColorHint="@color/label_grey1"
            android:textSize="16sp" />
    </RelativeLayout>


    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_radius"
        android:enabled="true"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/btn_confirm_yes"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>