<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ptr="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/normal_bg"
    android:orientation="vertical">


    <include layout="@layout/base_title"></include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white">

        <View
            android:id="@+id/iv2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentTop="true"
            android:background="@color/divider_gray_1"></View>

        <TextView
            android:id="@+id/tv_shop_label"
            android:layout_width="80dp"
            android:layout_height="49dp"
            android:layout_below="@+id/v2"
            android:gravity="right|center_vertical"
            android:text="@string/shop_name"
            android:textColor="@color/label_grey1"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_shop"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_alignTop="@id/tv_shop_label"
            android:layout_toRightOf="@id/tv_shop_label"
            android:background="@null"
            android:gravity="left|center_vertical"
            android:hint="@string/input_shop_name"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/text_color2"
            android:textColorHint="@color/label_grey1"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white">


        <TextView
            android:id="@+id/tv_label2"
            android:layout_width="80dp"
            android:layout_height="49dp"
            android:layout_below="@+id/iv3"
            android:gravity="right|center_vertical"
            android:text="@string/address_name"
            android:textColor="@color/label_grey1"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_toRightOf="@id/tv_label2"
            android:background="@null"
            android:gravity="left|center"
            android:hint="@string/input_address_name"
            android:paddingLeft="5dp"
            android:paddingRight="15dp"
            android:textColor="@color/text_color2"
            android:textColorHint="@color/label_grey1"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_label3"
            android:layout_width="80dp"
            android:layout_height="49dp"
            android:gravity="right|center_vertical"
            android:text="@string/work_time"
            android:textColor="@color/label_grey1"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_worktime"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_toRightOf="@id/tv_label3"
            android:background="@null"
            android:gravity="left|center"
            android:hint="@string/input_work_time"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/text_color2"
            android:textColorHint="@color/label_grey1"
            android:textSize="14sp" />

        <View
            android:id="@+id/iv5"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/et_bankcard"
            android:background="@color/divider_gray_1"></View>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_label4"
            android:layout_width="80dp"
            android:layout_height="49dp"
            android:gravity="right|center_vertical"
            android:text="@string/washspace_num"
            android:textColor="@color/label_grey1"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_washspace"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_toRightOf="@id/tv_label4"
            android:background="@null"
            android:gravity="left|center"
            android:hint="@string/washspace_num_hint"
            android:inputType="number"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/text_color2"
            android:textColorHint="@color/label_grey1"
            android:textSize="14sp" />

    </RelativeLayout>



    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_radius"
        android:enabled="true"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/btn_confirm_yes"
        android:textColor="@color/white"
        android:textSize="18sp" />


</LinearLayout>